--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -23,6 +23,7 @@ repos:
     hooks:
       - id: pytest
         name: pytest
-        entry: pytest
+        entry: python -m pytest -q --disable-warnings --maxfail=1 --reuse-db
         language: system
+        pass_filenames: false
         types: [python]
